--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
 
-    <title>App</title>
+    <title>Repli</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="images/favi.png"/>
+
   </head>
   <body>
     <noscript>
